<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/btn_default"
            android:title="@string/menu_logout" />
        <item
            android:id="@+id/nav_tictactoe"
            android:icon="@android:drawable/btn_default"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_pong"
            android:icon="@android:drawable/btn_default"
            android:title="@string/menu_pong" />
        <item
            android:id="@+id/nav_snake"
            android:icon="@android:drawable/btn_default"
            android:title="@string/menu_snake" />
    </group>
</menu>
