<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.droidteahouse.rainydays.ui.home.HomeFragment"
        android:label="@string/app_name"
        app:enterAnim="@anim/left_right"
        app:exitAnim="@anim/right_left"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/enterHome"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

        <action
            android:id="@+id/action_HomeFragment_to_GalleryFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:destination="@id/nav_tictactoe" />
        <action
            android:id="@+id/action_HomeFragment_to_LoginFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:destination="@id/nav_login" />
    </fragment>
    <fragment
        android:id="@+id/nav_login"
        android:name="com.droidteahouse.rainydays.ui.login.LoginFragment"
        android:label="@string/action_sign_in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:destination="@id/nav_home" />

        <argument
            android:name="logout"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_tictactoe"
        android:name="com.droidteahouse.rainydays.ui.tictactoe.TicTacToeFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_tic_tac_toe" />

    <fragment
        android:id="@+id/nav_pong"
        android:name="com.droidteahouse.rainydays.ui.pong.PongFragment"
        android:label="@string/menu_pong"
        tools:layout="@layout/fragment_slideshow" />
</navigation>